Fixed map overflowing below screen on devices. Fixed issue with clearing map layers on each map pan closing popup if open.

--- a/src/localcrimesmap/static/css/main.css
+++ b/src/localcrimesmap/static/css/main.css
@@ -5,6 +5,11 @@
     border:1px solid #AAA;
    }
 
+#map-container {
+    width: 100%;
+    height: 82%;
+   }
+
 #date-select-container{
     position: sticky;
     top: 0px;
